--- a/02_notebooks/02_data_preprocessing/02_data_preprocessing_improved.ipynb
+++ b/02_notebooks/02_data_preprocessing/02_data_preprocessing_improved.ipynb
@@ -451,41 +451,11 @@
       "====================================================================================================\n",
       "PROPORÇÃO 85/15 (treino/teste)\n",
       "====================================================================================================\n",
-      "Executando 5 validações cruzadas...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 1: F2=0.8522, Recall=0.8737, FN=25\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 2: F2=0.8541, Recall=0.8636, FN=27\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 3: F2=0.8768, Recall=0.8990, FN=20\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 4: F2=0.8605, Recall=0.8788, FN=24\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Executando 5 validações cruzadas...\n",
+      "   CV 1: F2=0.8522, Recall=0.8737, FN=25\n",
+      "   CV 2: F2=0.8541, Recall=0.8636, FN=27\n",
+      "   CV 3: F2=0.8768, Recall=0.8990, FN=20\n",
+      "   CV 4: F2=0.8605, Recall=0.8788, FN=24\n",
       "   CV 5: F2=0.8621, Recall=0.8838, FN=23\n",
       "\n",
       "RESULTADOS CONSOLIDADOS (5 validações):\n",
@@ -498,41 +468,11 @@
       "====================================================================================================\n",
       "PROPORÇÃO 82/18 (treino/teste)\n",
       "====================================================================================================\n",
-      "Executando 5 validações cruzadas...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 1: F2=0.8744, Recall=0.8987, FN=24\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 2: F2=0.8451, Recall=0.8565, FN=34\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 3: F2=0.8901, Recall=0.9156, FN=20\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 4: F2=0.8714, Recall=0.8861, FN=27\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Executando 5 validações cruzadas...\n",
+      "   CV 1: F2=0.8744, Recall=0.8987, FN=24\n",
+      "   CV 2: F2=0.8451, Recall=0.8565, FN=34\n",
+      "   CV 3: F2=0.8901, Recall=0.9156, FN=20\n",
+      "   CV 4: F2=0.8714, Recall=0.8861, FN=27\n",
       "   CV 5: F2=0.8609, Recall=0.8776, FN=29\n",
       "\n",
       "RESULTADOS CONSOLIDADOS (5 validações):\n",
@@ -545,41 +485,11 @@
       "====================================================================================================\n",
       "PROPORÇÃO 80/20 (treino/teste)\n",
       "====================================================================================================\n",
-      "Executando 5 validações cruzadas...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 1: F2=0.8600, Recall=0.8783, FN=32\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 2: F2=0.8321, Recall=0.8403, FN=42\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 3: F2=0.8869, Recall=0.9125, FN=23\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 4: F2=0.8683, Recall=0.8821, FN=31\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Executando 5 validações cruzadas...\n",
+      "   CV 1: F2=0.8600, Recall=0.8783, FN=32\n",
+      "   CV 2: F2=0.8321, Recall=0.8403, FN=42\n",
+      "   CV 3: F2=0.8869, Recall=0.9125, FN=23\n",
+      "   CV 4: F2=0.8683, Recall=0.8821, FN=31\n",
       "   CV 5: F2=0.8681, Recall=0.8859, FN=30\n",
       "\n",
       "RESULTADOS CONSOLIDADOS (5 validações):\n",
@@ -592,41 +502,11 @@
       "====================================================================================================\n",
       "PROPORÇÃO 78/22 (treino/teste)\n",
       "====================================================================================================\n",
-      "Executando 5 validações cruzadas...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 1: F2=0.8671, Recall=0.8862, FN=33\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 2: F2=0.8407, Recall=0.8517, FN=43\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 3: F2=0.8841, Recall=0.9103, FN=26\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 4: F2=0.8639, Recall=0.8759, FN=36\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Executando 5 validações cruzadas...\n",
+      "   CV 1: F2=0.8671, Recall=0.8862, FN=33\n",
+      "   CV 2: F2=0.8407, Recall=0.8517, FN=43\n",
+      "   CV 3: F2=0.8841, Recall=0.9103, FN=26\n",
+      "   CV 4: F2=0.8639, Recall=0.8759, FN=36\n",
       "   CV 5: F2=0.8654, Recall=0.8828, FN=34\n",
       "\n",
       "RESULTADOS CONSOLIDADOS (5 validações):\n",
@@ -639,41 +519,11 @@
       "====================================================================================================\n",
       "PROPORÇÃO 75/25 (treino/teste)\n",
       "====================================================================================================\n",
-      "Executando 5 validações cruzadas...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 1: F2=0.8715, Recall=0.8906, FN=36\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 2: F2=0.8268, Recall=0.8359, FN=54\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 3: F2=0.8858, Recall=0.9149, FN=28\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 4: F2=0.8772, Recall=0.8906, FN=36\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Executando 5 validações cruzadas...\n",
+      "   CV 1: F2=0.8715, Recall=0.8906, FN=36\n",
+      "   CV 2: F2=0.8268, Recall=0.8359, FN=54\n",
+      "   CV 3: F2=0.8858, Recall=0.9149, FN=28\n",
+      "   CV 4: F2=0.8772, Recall=0.8906, FN=36\n",
       "   CV 5: F2=0.8626, Recall=0.8815, FN=39\n",
       "\n",
       "RESULTADOS CONSOLIDADOS (5 validações):\n",
@@ -686,41 +536,11 @@
       "====================================================================================================\n",
       "PROPORÇÃO 72/28 (treino/teste)\n",
       "====================================================================================================\n",
-      "Executando 5 validações cruzadas...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 1: F2=0.8853, Recall=0.9079, FN=34\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 2: F2=0.8311, Recall=0.8428, FN=58\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 3: F2=0.8851, Recall=0.9106, FN=33\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 4: F2=0.8761, Recall=0.8889, FN=41\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Executando 5 validações cruzadas...\n",
+      "   CV 1: F2=0.8853, Recall=0.9079, FN=34\n",
+      "   CV 2: F2=0.8311, Recall=0.8428, FN=58\n",
+      "   CV 3: F2=0.8851, Recall=0.9106, FN=33\n",
+      "   CV 4: F2=0.8761, Recall=0.8889, FN=41\n",
       "   CV 5: F2=0.8662, Recall=0.8808, FN=44\n",
       "\n",
       "RESULTADOS CONSOLIDADOS (5 validações):\n",
@@ -733,41 +553,11 @@
       "====================================================================================================\n",
       "PROPORÇÃO 70/30 (treino/teste)\n",
       "====================================================================================================\n",
-      "Executando 5 validações cruzadas...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 1: F2=0.8727, Recall=0.8886, FN=44\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 2: F2=0.8362, Recall=0.8481, FN=60\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 3: F2=0.8867, Recall=0.9114, FN=35\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 4: F2=0.8856, Recall=0.9013, FN=39\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Executando 5 validações cruzadas...\n",
+      "   CV 1: F2=0.8727, Recall=0.8886, FN=44\n",
+      "   CV 2: F2=0.8362, Recall=0.8481, FN=60\n",
+      "   CV 3: F2=0.8867, Recall=0.9114, FN=35\n",
+      "   CV 4: F2=0.8856, Recall=0.9013, FN=39\n",
       "   CV 5: F2=0.8761, Recall=0.8911, FN=43\n",
       "\n",
       "RESULTADOS CONSOLIDADOS (5 validações):\n",
@@ -780,41 +570,11 @@
       "====================================================================================================\n",
       "PROPORÇÃO 68/32 (treino/teste)\n",
       "====================================================================================================\n",
-      "Executando 5 validações cruzadas...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 1: F2=0.8772, Recall=0.8934, FN=45\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 2: F2=0.8419, Recall=0.8555, FN=61\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 3: F2=0.8874, Recall=0.9147, FN=36\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 4: F2=0.8874, Recall=0.9005, FN=42\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Executando 5 validações cruzadas...\n",
+      "   CV 1: F2=0.8772, Recall=0.8934, FN=45\n",
+      "   CV 2: F2=0.8419, Recall=0.8555, FN=61\n",
+      "   CV 3: F2=0.8874, Recall=0.9147, FN=36\n",
+      "   CV 4: F2=0.8874, Recall=0.9005, FN=42\n",
       "   CV 5: F2=0.8598, Recall=0.8720, FN=54\n",
       "\n",
       "RESULTADOS CONSOLIDADOS (5 validações):\n",
@@ -827,41 +587,11 @@
       "====================================================================================================\n",
       "PROPORÇÃO 65/35 (treino/teste)\n",
       "====================================================================================================\n",
-      "Executando 5 validações cruzadas...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 1: F2=0.8795, Recall=0.9024, FN=45\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 2: F2=0.8546, Recall=0.8720, FN=59\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 3: F2=0.8820, Recall=0.9046, FN=44\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CV 4: F2=0.8859, Recall=0.9024, FN=45\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Executando 5 validações cruzadas...\n",
+      "   CV 1: F2=0.8795, Recall=0.9024, FN=45\n",
+      "   CV 2: F2=0.8546, Recall=0.8720, FN=59\n",
+      "   CV 3: F2=0.8820, Recall=0.9046, FN=44\n",
+      "   CV 4: F2=0.8859, Recall=0.9024, FN=45\n",
       "   CV 5: F2=0.8685, Recall=0.8829, FN=54\n",
       "\n",
       "RESULTADOS CONSOLIDADOS (5 validações):\n",
@@ -1561,13 +1291,7 @@
       "   Taxa de preservação importantes: 100.0%\n",
       "   SMOTE preservou bem as correlações importantes!\n",
       "\n",
-      "Gerando visualização comparativa...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Gerando visualização comparativa...\n",
       "   Visualizacao salva: C:\\Users\\Anderson\\Downloads\\tcc_hipertensao_arquivos\\trabalho_tcc_mod_classifc_hipertensao-master\\trabalho_tcc_mod_classifc_hipertensao-master\\04_reports\\validation\\correlation_preservation_analysis.html\n",
       "\n",
       "Analise salva: C:\\Users\\Anderson\\Downloads\\tcc_hipertensao_arquivos\\trabalho_tcc_mod_classifc_hipertensao-master\\trabalho_tcc_mod_classifc_hipertensao-master\\04_reports\\validation\\correlation_preservation_analysis.json\n",
@@ -1805,13 +1529,7 @@
       "TESTANDO 3 TÉCNICAS DE ESCALONAMENTO:\n",
       "====================================================================================================\n",
       "\n",
-      "Testando StandardScaler...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Testando StandardScaler...\n",
       "   F1-Score: 0.9236 ± 0.0185\n",
       "   Scores CV: ['0.9016', '0.9161', '0.9105', '0.9379', '0.9518']\n",
       "   Características escalonamento:\n",
@@ -1821,13 +1539,7 @@
       "      Min/Max globais: [-3.100, 14.196]\n",
       "      Qualidade: Excelente\n",
       "\n",
-      "Testando RobustScaler...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Testando RobustScaler...\n",
       "   F1-Score: 0.9235 ± 0.0180\n",
       "   Scores CV: ['0.9013', '0.9161', '0.9116', '0.9379', '0.9505']\n",
       "   Características escalonamento:\n",
@@ -1837,13 +1549,7 @@
       "      Min/Max globais: [-2.514, 22.699]\n",
       "      Qualidade: Excelente\n",
       "\n",
-      "Testando MinMaxScaler...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Testando MinMaxScaler...\n",
       "   F1-Score: 0.9237 ± 0.0175\n",
       "   Scores CV: ['0.9028', '0.9159', '0.9116', '0.9391', '0.9493']\n",
       "   Características escalonamento:\n",
