--- a/02_notebooks/03_model_training/03_model_training_imrpoved.ipynb
+++ b/02_notebooks/03_model_training/03_model_training_imrpoved.ipynb
@@ -579,24 +579,12 @@
       "MODELO 1/5: Random Forest\n",
       "============================================================\n",
       "\n",
-      "Fase 1: Validacao Cruzada (5-folds)...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   OK CV concluida em 3.8s\n",
+      "Fase 1: Validacao Cruzada (5-folds)...\n",
+      "   OK CV concluida em 3.3s\n",
       "   F2-Score: 0.8699 +/- 0.0314\n",
       "   Recall: 0.8925 +/- 0.0282\n",
       "\n",
-      "Fase 2: Treinamento Final e Teste...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fase 2: Treinamento Final e Teste...\n",
       "   OK Teste concluido em 0.5s\n",
       "   F2-Score: 0.1113\n",
       "   Recall: 0.0911\n",
@@ -608,25 +596,13 @@
       "MODELO 2/5: Gradient Boosting\n",
       "============================================================\n",
       "\n",
-      "Fase 1: Validacao Cruzada (5-folds)...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   OK CV concluida em 4.9s\n",
+      "Fase 1: Validacao Cruzada (5-folds)...\n",
+      "   OK CV concluida em 4.3s\n",
       "   F2-Score: 0.8514 +/- 0.0269\n",
       "   Recall: 0.8669 +/- 0.0261\n",
       "\n",
-      "Fase 2: Treinamento Final e Teste...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   OK Teste concluido em 2.8s\n",
+      "Fase 2: Treinamento Final e Teste...\n",
+      "   OK Teste concluido em 2.5s\n",
       "   F2-Score: 0.1113\n",
       "   Recall: 0.0911\n",
       "   Precision: 1.0000\n",
@@ -637,25 +613,13 @@
       "MODELO 3/5: Logistic Regression\n",
       "============================================================\n",
       "\n",
-      "Fase 1: Validacao Cruzada (5-folds)...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   OK CV concluida em 2.5s\n",
+      "Fase 1: Validacao Cruzada (5-folds)...\n",
+      "   OK CV concluida em 1.9s\n",
       "   F2-Score: 0.8548 +/- 0.0297\n",
       "   Recall: 0.8762 +/- 0.0274\n",
       "\n",
-      "Fase 2: Treinamento Final e Teste...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   OK Teste concluido em 0.6s\n",
+      "Fase 2: Treinamento Final e Teste...\n",
+      "   OK Teste concluido em 0.5s\n",
       "   F2-Score: 0.0000\n",
       "   Recall: 0.0000\n",
       "   Precision: 0.0000\n",
@@ -672,7 +636,7 @@
       "   Recall: 0.7722 +/- 0.0095\n",
       "\n",
       "Fase 2: Treinamento Final e Teste...\n",
-      "   OK Teste concluido em 0.1s\n",
+      "   OK Teste concluido em 0.0s\n",
       "   F2-Score: 0.1113\n",
       "   Recall: 0.0911\n",
       "   Precision: 1.0000\n",
@@ -683,24 +647,12 @@
       "MODELO 5/5: XGBoost\n",
       "============================================================\n",
       "\n",
-      "Fase 1: Validacao Cruzada (5-folds)...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   OK CV concluida em 0.8s\n",
+      "Fase 1: Validacao Cruzada (5-folds)...\n",
+      "   OK CV concluida em 1.3s\n",
       "   F2-Score: 0.8428 +/- 0.0293\n",
       "   Recall: 0.8552 +/- 0.0274\n",
       "\n",
-      "Fase 2: Treinamento Final e Teste...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fase 2: Treinamento Final e Teste...\n",
       "   OK Teste concluido em 0.4s\n",
       "   F2-Score: 0.0000\n",
       "   Recall: 0.0000\n",
@@ -710,7 +662,7 @@
       "\n",
       "================================================================================\n",
       "TREINAMENTO CONCLUIDO COM SUCESSO!\n",
-      "   Tempo total: 16.5s (0.3 minutos)\n",
+      "   Tempo total: 14.7s (0.2 minutos)\n",
       "   5 modelos treinados\n",
       "   Metodologia corrigida aplicada\n",
       "   Sem problemas de SMOTE duplicado\n"
@@ -1075,13 +1027,7 @@
       "✅ Melhor modelo salvo: Random Forest\n",
       "✅ Todos os modelos salvos (5 modelos)\n",
       "✅ Resultados salvos em CSV\n",
-      "✅ Resultados de validação cruzada salvos\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "✅ Resultados de validação cruzada salvos\n",
       "✅ Metadados completos salvos\n",
       "✅ Relatório final salvo\n",
       "\n",
@@ -1327,11 +1273,11 @@
       "3        Decision Tree  0.766322  0.009323     0.772209    0.009463   \n",
       "\n",
       "   precision_mean  accuracy_mean  auc_mean  tempo_cv  f2_score    recall  \\\n",
-      "0        0.790310       0.892602  0.948387  3.820950  0.111347  0.091106   \n",
-      "2        0.779244       0.883898  0.945625  2.530092  0.000000  0.000000   \n",
-      "1        0.795292       0.888973  0.946767  4.851627  0.111347  0.091106   \n",
-      "4        0.797184       0.887160  0.947988  0.803576  0.000000  0.000000   \n",
-      "3        0.744299       0.846522  0.862541  0.103186  0.111347  0.091106   \n",
+      "0        0.790310       0.892602  0.948387  3.317424  0.111347  0.091106   \n",
+      "2        0.779244       0.883898  0.945625  1.908643  0.000000  0.000000   \n",
+      "1        0.795292       0.888973  0.946767  4.286282  0.111347  0.091106   \n",
+      "4        0.797184       0.887160  0.947988  1.283133  0.000000  0.000000   \n",
+      "3        0.744299       0.846522  0.862541  0.066848  0.111347  0.091106   \n",
       "\n",
       "   precision  accuracy  \n",
       "0        1.0  0.717655  \n",
