--- a/02_notebooks/04_analysis_optimization/04_analysis_optimization_improved.ipynb
+++ b/02_notebooks/04_analysis_optimization/04_analysis_optimization_improved.ipynb
@@ -282,22 +282,32 @@
     "# FUNÇÕES AUXILIARES PARA VISUALIZAÇÕES PROFISSIONAIS\n",
     "# ============================================================================\n",
     "\n",
-    "def enhanced_save_figure(fig, filename, formats=['png', 'svg'], **kwargs):\n",
-    "    \"\"\"Salva figura em múltiplos formatos com configurações profissionais\"\"\"\n",
-    "    \n",
-    "    # Configurações padrão\n",
+    "def enhanced_save_figure(fig, filename, formats=['png', 'svg'], save_axes=True, legend_outside=True, axes_suffix='ax', **kwargs):\n",
+    "    \"\"\"Salva figura em multiplos formatos com configuracoes profissionais.\n",
+    "    Tambem salva cada subplot individualmente quando houver mais de um eixo.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Configuracoes padrao\n",
     "    save_kwargs = {\n",
     "        'dpi': PLOT_CONFIG['dpi'],\n",
     "        'bbox_inches': PLOT_CONFIG['bbox_inches'],\n",
     "        'facecolor': PLOT_CONFIG['facecolor'],\n",
     "        'edgecolor': 'none',\n",
-    "        'pad_inches': 0.1\n",
+    "        'pad_inches': 0.2\n",
     "    }\n",
     "    save_kwargs.update(kwargs)\n",
-    "    \n",
-    "    # Criar diretório se não existir\n",
+    "\n",
+    "    # Criar diretorio se nao existir\n",
     "    os.makedirs(RESULTS_DIR / 'visualizations', exist_ok=True)\n",
-    "    \n",
+    "\n",
+    "    if legend_outside:\n",
+    "        for ax in fig.axes:\n",
+    "            legend = ax.get_legend()\n",
+    "            if legend:\n",
+    "                legend.set_loc('upper left')\n",
+    "                legend.set_bbox_to_anchor((1.02, 1.0))\n",
+    "                legend.set_frameon(True)\n",
+    "\n",
     "    saved_files = []\n",
     "    for fmt in formats:\n",
     "        filepath = RESULTS_DIR / 'visualizations' / f\"{filename}.{fmt}\"\n",
@@ -306,12 +316,39 @@
     "            saved_files.append(filepath)\n",
     "        except Exception as e:\n",
     "            print(f\"AVISO: Erro ao salvar {filepath}: {e}\")\n",
-    "    \n",
+    "\n",
+    "    if save_axes and len(fig.axes) > 1:\n",
+    "        try:\n",
+    "            from matplotlib.transforms import Bbox\n",
+    "\n",
+    "            fig.canvas.draw()\n",
+    "            renderer = fig.canvas.get_renderer()\n",
+    "            ax_save_kwargs = save_kwargs.copy()\n",
+    "            ax_save_kwargs.pop('bbox_inches', None)\n",
+    "\n",
+    "            for idx, ax in enumerate(fig.axes, 1):\n",
+    "                if not ax.get_visible():\n",
+    "                    continue\n",
+    "                bbox = ax.get_tightbbox(renderer)\n",
+    "                legend = ax.get_legend()\n",
+    "                if legend:\n",
+    "                    bbox = Bbox.union([bbox, legend.get_tightbbox(renderer)])\n",
+    "                bbox = bbox.transformed(fig.dpi_scale_trans.inverted())\n",
+    "\n",
+    "                for fmt in formats:\n",
+    "                    ax_file = RESULTS_DIR / 'visualizations' / f\"{filename}_{axes_suffix}{idx:02d}.{fmt}\"\n",
+    "                    try:\n",
+    "                        fig.savefig(ax_file, format=fmt, bbox_inches=bbox, **ax_save_kwargs)\n",
+    "                    except Exception as e:\n",
+    "                        print(f\"AVISO: Erro ao salvar {ax_file}: {e}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"AVISO: Falha ao salvar subplots individuais: {e}\")\n",
+    "\n",
     "    if saved_files:\n",
-    "        print(f\"✅ SUCESSO: Figura salva em {len(saved_files)} formato(s): {filename}\")\n",
+    "        print(f\"? SUCESSO: Figura salva em {len(saved_files)} formato(s): {filename}\")\n",
     "        return saved_files\n",
     "    else:\n",
-    "        print(f\"❌ ERRO: Falha ao salvar figura: {filename}\")\n",
+    "        print(f\"? ERRO: Falha ao salvar figura: {filename}\")\n",
     "        return []\n",
     "\n",
     "def add_value_annotations(ax, bars, format_str='{:.3f}', offset=0.01, **kwargs):\n",
