--- a/02_notebooks/02_data_preprocessing/02_data_preprocessing_improved.ipynb
+++ b/02_notebooks/02_data_preprocessing/02_data_preprocessing_improved.ipynb
@@ -40,24 +40,24 @@
    "source": [
     "# Pré-processamento Avançado de Dados - Predição de Hipertensão\n",
     "\n",
-    "**Versão Melhorada com Validações Rigorosas**\n",
+    "**Versão revisada com validações metodológicas**\n",
     "\n",
-    "**Objetivo**: Pipeline completo de pré-processamento com técnicas avançadas, validações metodológicas e eliminação de data leakage.\n",
+    "**Objetivo:** Implementar um pipeline completo de pré-processamento com técnicas avançadas, validações metodológicas e prevenção de data leakage.\n",
     "\n",
-    "**Autores**: Tiago Dias, Nicolas Vagnes, Marcelo Colpani e Rubens Collin  \n",
-    "**Orientador**: Prof Mse: Anderson Henrique Rodrigues Ferreira\n",
-    "**Instituição**: CEUNSP - Salto  \n",
-    "**Curso**: Faculdade de Ciência da Computação\n",
+    "**Autores:** Tiago Dias, Nicolas Vagnes, Marcelo Colpani e Rubens Collin  \n",
+    "**Orientador:** Prof. Mse. Anderson Henrique Rodrigues Ferreira  \n",
+    "**Instituição:** CEUNSP - Salto  \n",
+    "**Curso:** Faculdade de Ciência da Computação\n",
     "\n",
     "---\n",
     "\n",
     "## Estrutura do Pré-processamento\n",
     "\n",
-    "Este notebook implementa um pipeline rigoroso focado exclusivamente em pré-processamento para ML:\n",
+    "Este notebook implementa um pipeline focado exclusivamente em preparação de dados para modelagem:\n",
     "\n",
     "1. **Setup e Importações** - Configuração do ambiente especializado\n",
     "2. **Carregamento de Dados** - Importação sem análise exploratória redundante\n",
-    "3. **Pré-processamento Inicial** - Preparação básica para modelagem\n",
+    "3. **Pré-processamento Inicial** - Verificações rápidas e preparação básica\n",
     "4. **Teste Granular de Proporções** - Otimização sistemática de divisão treino/teste\n",
     "5. **SMOTE Metodologicamente Correto** - Balanceamento sem data leakage\n",
     "6. **Validações Pós-SMOTE** - Análise de outliers e preservação de correlações\n",
@@ -69,16 +69,17 @@
     "\n",
     "## Diferenciais Metodológicos\n",
     "\n",
-    "**Eliminação de Redundâncias:**\n",
+    "**Eliminação de redundâncias:**\n",
     "- Análise exploratória detalhada está no Notebook 01\n",
     "- Foco exclusivo em preparação para modelagem\n",
     "\n",
-    "**Rigor Metodológico:**\n",
+    "**Rigor metodológico:**\n",
     "- SMOTE aplicado apenas após divisão e somente no treino\n",
     "- Validações automáticas de data leakage\n",
     "- Teste granular de proporções com validação cruzada\n",
     "- Análise de preservação de correlações pós-SMOTE\n",
-    "- Comparação sistemática de técnicas de escalonamento"
+    "- Comparação sistemática de técnicas de escalonamento\n",
+    "\n"
    ]
   },
   {
@@ -87,7 +88,8 @@
    "source": [
     "## 1. Setup e Importações\n",
     "\n",
-    "Configuração do ambiente com bibliotecas especializadas para machine learning, pré-processamento e validação de dados."
+    "Configuração do ambiente com bibliotecas especializadas para machine learning, pré-processamento e validação de dados.\n",
+    "\n"
    ]
   },
   {
@@ -171,7 +173,8 @@
    "source": [
     "## 2. Carregamento de Dados\n",
     "\n",
-    "Importação dos dados processados na análise exploratória com verificações de integridade."
+    "Importação dos dados processados na análise exploratória com verificações de integridade, colunas e valores ausentes.\n",
+    "\n"
    ]
   },
   {
@@ -206,6 +209,7 @@
     }
    ],
    "source": [
+    "# Carregamento do dataset e padronização dos nomes das colunas\n",
     "print_section(\"CARREGAMENTO DOS DADOS DO KAGGLE\")\n",
     "\n",
     "# Caminhos possíveis para o arquivo\n",
@@ -268,7 +272,8 @@
    "source": [
     "## 3. Pré-processamento Inicial\n",
     "\n",
-    "**FOCO**: Tratamento direto para modelagem sem redundância com análise exploratória."
+    "Nesta etapa realizamos verificações rápidas de consistência e desbalanceamento para orientar as próximas decisões do pipeline.\n",
+    "\n"
    ]
   },
   {
@@ -308,6 +313,7 @@
     }
    ],
    "source": [
+    "# Verificações rápidas para orientar o pré-processamento\n",
     "print_section(\"PRÉ-PROCESSAMENTO INICIAL - PREPARAÇÃO PARA MODELAGEM\")\n",
     "\n",
     "# Foco específico em aspectos que afetam a modelagem (sem redundância com notebook 01)\n",
@@ -334,7 +340,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Pré-processamento Inicial"
+    "## 4. Preparação de Variáveis e Imputação Inicial\n",
+    "\n",
+    "Separação de features e target, seguida do tratamento inicial de valores ausentes para garantir consistência do conjunto de treino.\n",
+    "\n"
    ]
   },
   {
@@ -370,6 +379,7 @@
     }
    ],
    "source": [
+    "# Separação de features/target e imputação inicial\n",
     "print_section(\"PRÉ-PROCESSAMENTO INICIAL\")\n",
     "\n",
     "# Separar features e target\n",
@@ -413,7 +423,8 @@
    "source": [
     "## 5. Teste de Múltiplas Proporções Treino/Teste\n",
     "\n",
-    "Nesta etapa, realizamos uma análise sistemática e granular de diferentes proporções de divisão para identificar a configuração ótima que maximize o desempenho do modelo."
+    "Nesta etapa realizamos uma análise sistemática e granular de diferentes proporções de divisão para identificar a configuração ótima que maximize o desempenho do modelo.\n",
+    "\n"
    ]
   },
   {
@@ -810,9 +821,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. APLICAÇÃO CORRETA DO SMOTE\n",
+    "## 6. Aplicação Correta do SMOTE\n",
     "\n",
-    "**CRÍTICO**: SMOTE deve ser aplicado APENAS após a divisão treino/teste e SOMENTE no conjunto de treino."
+    "SMOTE deve ser aplicado apenas após a divisão treino/teste e somente no conjunto de treino, evitando data leakage.\n",
+    "\n"
    ]
   },
   {
@@ -901,6 +913,7 @@
     }
    ],
    "source": [
+    "# Divisão estratificada e aplicação correta do SMOTE\n",
     "print_section(\"DIVISAO ESTRATIFICADA E APLICACAO CORRETA DE SMOTE\")\n",
     "\n",
     "print(f\"\\nORDEM CORRETA (CRITICA):\")\n",
@@ -1089,6 +1102,7 @@
     }
    ],
    "source": [
+    "# Validação de outliers após o SMOTE\n",
     "print_section(\"VALIDAÇÃO PÓS-SMOTE: ANÁLISE DE OUTLIERS\", \"=\", 100)\n",
     "\n",
     "print(\"\\nOBJETIVO: Verificar se SMOTE introduziu outliers problemáticos nas amostras sintéticas\")\n",
@@ -1300,6 +1314,7 @@
     }
    ],
    "source": [
+    "# Validação de preservação de correlações após o SMOTE\n",
     "print_section(\"VALIDAÇÃO DE PRESERVAÇÃO DE CORRELAÇÕES PÓS-SMOTE\", \"=\", 100)\n",
     "\n",
     "print(\"\\nOBJETIVO: Verificar se SMOTE preservou correlações importantes entre features\")\n",
@@ -1604,6 +1619,7 @@
     }
    ],
    "source": [
+    "# Comparação de técnicas de escalonamento\n",
     "print_section(\"COMPARAÇÃO DE TÉCNICAS DE ESCALONAMENTO\", \"=\", 100)\n",
     "\n",
     "print(\"\\nOBJETIVO: Comparar StandardScaler vs RobustScaler vs MinMaxScaler\")\n",
@@ -1837,7 +1853,8 @@
    "source": [
     "## 7. Comparação de Técnicas de Escalonamento\n",
     "\n",
-    "**OBJETIVO**: Comparar diferentes scalers para identificar o mais adequado aos dados."
+    "Comparação de diferentes scalers para identificar o mais adequado aos dados, considerando desempenho e estabilidade.\n",
+    "\n"
    ]
   },
   {
@@ -1846,7 +1863,8 @@
    "source": [
     "## Validação de Preservação de Correlações\n",
     "\n",
-    "**IMPORTANTE**: Verificar se SMOTE preservou as correlações entre features importantes."
+    "Verificação de preservação das correlações entre features após o SMOTE, garantindo coerência estatística.\n",
+    "\n"
    ]
   },
   {
@@ -1855,14 +1873,18 @@
    "source": [
     "## Validação Pós-SMOTE: Análise de Outliers\n",
     "\n",
-    "**CRÍTICO**: Verificar se SMOTE não introduziu outliers problemáticos nas amostras sintéticas."
+    "Avaliação de outliers em amostras sintéticas para garantir que o balanceamento não degrada a qualidade do conjunto de treino.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. Escalonamento de Features"
+    "## 8. Escalonamento de Features\n",
+    "\n",
+    "Aplicação do escalonamento escolhido e validação das estatísticas resultantes.\n",
+    "\n"
    ]
   },
   {
@@ -1896,6 +1918,7 @@
     }
    ],
    "source": [
+    "# Escalonamento final das features\n",
     "print_section(\"ESCALONAMENTO DE FEATURES\")\n",
     "\n",
     "# Identificar colunas numéricas\n",
@@ -1938,7 +1961,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9. Visualização do Pipeline Completo"
+    "## 9. Visualização do Pipeline Completo\n",
+    "\n",
+    "Consolidação das etapas principais em uma visão geral para documentação do processo.\n",
+    "\n"
    ]
   },
   {
@@ -2055,6 +2081,7 @@
     }
    ],
    "source": [
+    "# Síntese das melhorias aplicadas no pré-processamento\n",
     "print_section(\"RESUMO FINAL DO PRÉ-PROCESSAMENTO APRIMORADO\", \"=\", 100)\n",
     "\n",
     "print(\"\\nMELHORIAS CRÍTICAS IMPLEMENTADAS:\")\n",
@@ -2152,7 +2179,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10. Salvamento dos Dados Processados"
+    "## 10. Salvamento dos Dados Processados\n",
+    "\n",
+    "Persistência dos conjuntos processados e metadados para uso nos notebooks seguintes.\n",
+    "\n"
    ]
   },
   {
@@ -2195,6 +2225,7 @@
     }
    ],
    "source": [
+    "# Salvamento dos conjuntos processados e metadados\n",
     "print_section(\"SALVANDO DADOS PROCESSADOS\")\n",
     "\n",
     "# Criar diretórios\n",
@@ -2269,7 +2300,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11. Validações Finais"
+    "## 11. Validações Finais\n",
+    "\n",
+    "Checagens finais de integridade, distribuição e ausência de data leakage antes do encerramento.\n",
+    "\n"
    ]
   },
   {
@@ -2332,6 +2366,7 @@
     }
    ],
    "source": [
+    "# Checagens finais de qualidade e integridade\n",
     "print_section(\"VALIDAÇÕES FINAIS DE QUALIDADE\", \"=\", 100)\n",
     "\n",
     "print(\"\\nExecutando validações críticas...\\n\")\n",
@@ -2427,7 +2462,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Resumo Final"
+    "## Resumo Final\n",
+    "\n",
+    "Síntese das melhorias implementadas e orientação para continuidade do pipeline.\n",
+    "\n"
    ]
   },
   {
@@ -2516,6 +2554,7 @@
     }
    ],
    "source": [
+    "# Resumo executivo do pré-processamento\n",
     "print_section(\"RESUMO FINAL DO PRÉ-PROCESSAMENTO\", \"=\", 100)\n",
     "\n",
     "print(\"\\nMELHORIAS CRÍTICAS IMPLEMENTADAS:\")\n",
